<resources>
    <string name="app_name">Lab3_2</string>
    <string name="flag">Flag</string>
    <string-array name="age_group">
    <item>Select age</item>
    <item>Less than 5</item>
    <item>6 to 10</item>
    <item>11 to 16</item>
    <item>17 to 21</item>
    <item>22 to 30</item>
    <item>31 to 40</item>
    <item>41 to 50</item>
    <item>more than 50</item>
    </string-array>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Smoker</string>
    <string name="premium">Premium</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
</resources>
